fixes margins on mobile

--- a/client/src/components/MovementList.css
+++ b/client/src/components/MovementList.css
@@ -39,6 +39,6 @@
 @media only screen and (max-width: 800px) {
   #movementContainer {
     width: 80vw;
-    margin: 2.5vh 10vw;
+    margin: 5vh 10vw;
   }
 }
