--- a/client/src/components/Route.css
+++ b/client/src/components/Route.css
@@ -15,6 +15,6 @@
 @media only screen and (max-width: 800px) {
   #route {
     width: 80vw;
-    margin: 1.5vh 10vw;
+    margin: 1.5vh 10vw 5vh;
   }
 }
